--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -23,6 +23,9 @@ jobs:
           ignore_files: "README.md"
           apply_fixes_mode: "commit"
 
+      - name: Fix Git permissions
+        run: sudo chown -R $(whoami) .git/
+
       - name: Run Signed Commit Action
         uses: ministryofjustice/modernisation-platform-github-actions/signed-commit@e3ccf33927794ce5350b9211e288ad84e69365a8 # v3.4.4
         with:
