--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -3,20 +3,23 @@ on:
   pull_request:
     types: [opened, edited, reopened, synchronize]
 
-permissions: read-all
+permissions:
+  contents: write
+  security-events: write  # needed for SARIF upload
   
 jobs:
   format-code:
-    permissions:
-      contents: write
-      security-events: write  # needed for SARIF upload
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - name: Run Format Code Action
+      - name: format-code
         uses: ministryofjustice/modernisation-platform-github-actions/format-code@e3ccf33927794ce5350b9211e288ad84e69365a8 # v3.4.4
+
+  commit-fixes:
+    runs-on: ubuntu-latest
+    steps:
+      - name: commit-changes
+        uses: ministryofjustice/modernisation-platform-github-actions/signed-commit@<ref>
         with:
-          ignore_files: "README.md"
-          apply_fixes: "None"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "GitHub Actions Code Formatter workflow"
+          pr_body: "This pull request includes updates from the GitHub Actions Code Formatter workflow. Please review the changes and merge if everything looks good."
