--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -3,22 +3,26 @@ on:
   pull_request:
     types: [opened, edited, reopened, synchronize]
 
-permissions:
-  contents: write
-  security-events: write  # needed for SARIF upload
+permissions: read-all
   
 jobs:
   format-code:
+    permissions:
+      contents: write
+      pull-requests: write
+      security-events: write  # needed for SARIF upload
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+        with:
+          fetch-depth: 0
+      
       - name: format-code
         uses: ministryofjustice/modernisation-platform-github-actions/format-code@e3ccf33927794ce5350b9211e288ad84e69365a8 # v3.4.4
 
-  commit-fixes:
-    runs-on: ubuntu-latest
-    steps:
       - name: commit-changes
-        uses: ministryofjustice/modernisation-platform-github-actions/signed-commit@e3ccf33927794ce5350b9211e288ad84e69365a8 # v3.4.8
+        uses: ministryofjustice/modernisation-platform-github-actions/signed-commit@e3ccf33927794ce5350b9211e288ad84e69365a8 # v3.4.4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr_title: "GitHub Actions Code Formatter workflow"
