--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+          with:
+            ref: ${{ github.head_ref }}
+            fetch-depth: 0
 
       - name: format-code
         uses: ministryofjustice/modernisation-platform-github-actions/format-code@4eceb2a416a197e91dc557c2ef0b5dd9afe29e0c # v3.4.6
