--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -14,9 +14,26 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
 
-      - name: Run Format Code Action
-        uses: ministryofjustice/modernisation-platform-github-actions/format-code@e3ccf33927794ce5350b9211e288ad84e69365a8 # v3.4.4
+      - name: format-code
+        uses: ministryofjustice/modernisation-platform-github-actions/format-code@4eceb2a416a197e91dc557c2ef0b5dd9afe29e0c # v3.4.6
         with:
           ignore_files: "README.md"
-          apply_fixes: "None"
+
+      - name: Show git HEAD info
+        run: |
+          echo "symbolic-full-name: $(git rev-parse --symbolic-full-name HEAD || echo DETACHED)"
+          echo "HEAD file:"
+          cat .git/HEAD | sed 's/^/    /'
+          git branch -a
+
+      - name: commit-changes
+        uses: ministryofjustice/modernisation-platform-github-actions/signed-commit@4eceb2a416a197e91dc557c2ef0b5dd9afe29e0c # v3.4.6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "GitHub Actions Code Formatter workflow"
+          pr_body: "This pull request includes updates from the GitHub Actions Code Formatter workflow. Please review the changes and merge if everything looks good."
