--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -19,7 +19,8 @@ jobs:
         uses: ministryofjustice/modernisation-platform-github-actions/format-code@7b8dd97eb5b596a88206805943771ea7ffcde235 # v3.4.8
         with:
           ignore_files: "README.md"
-          disable_error: "false"
+          disable_errors: "false"
+          apply_fixes_mode: "commit"
 
       # # Currently doesn't work due to a bug. https://mojdt.slack.com/archives/C01A7QK5VM1/p1764252104497789. 
       # - name: Run signed-commit action
