--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -4,7 +4,7 @@ on:
     types: [opened, edited, reopened, synchronize]
 
 permissions: read-all
-  
+
 jobs:
   format-code:
     permissions:
@@ -22,7 +22,7 @@ jobs:
           ignore_files: "README.md"
           disable_errors: "false"
 
-      # # Currently doesn't work due to a bug. https://mojdt.slack.com/archives/C01A7QK5VM1/p1764252104497789. 
+      # # Currently doesn't work due to a bug. https://mojdt.slack.com/archives/C01A7QK5VM1/p1764252104497789 / https://github.com/ministryofjustice/modernisation-platform/issues/11985
       # - name: Run signed-commit action
       #   uses: ministryofjustice/modernisation-platform-github-actions/signed-commit@4eceb2a416a197e91dc557c2ef0b5dd9afe29e0c # v3.4.6
       #   with:
