--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,11 @@ repos:
       - id: terraform_fmt
       - id: terraform_tflint
       - id: terraform_validate
+        exclude: '(examples)'
+      - id: terraform_trivy
+        args:
+          - --args=--skip-dirs=**.terraform
+          - --args=--skip-dirs=**examples
       # - id: terraform_checkov
       #   args:
       #     - --args=--quiet
@@ -18,3 +23,8 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: https://github.com/psf/black
+    rev: 25.11.0
+    hooks:
+    - id: black
+      language_version: python3.14
