--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,10 +12,10 @@ repos:
         args:
           - --args=--skip-dirs=**.terraform
           - --args=--skip-dirs=**examples
-      # - id: terraform_checkov
-      #   args:
-      #     - --args=--quiet
-      #     - --args=--compact
+      - id: terraform_checkov
+        args:
+          - --args=--quiet
+          - --args=--compact
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
