--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,10 +12,10 @@ repos:
         args:
           - --args=--skip-dirs=**.terraform
           - --args=--skip-dirs=**examples
-      - id: terraform_checkov
-        args:
-          - --args=--quiet
-          - --args=--compact
+      # - id: terraform_checkov
+      #   args:
+      #     - --args=--quiet
+      #     - --args=--compact
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
@@ -23,8 +23,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/psf/black
-    rev: 25.11.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.14.7
     hooks:
-    - id: black
-      language_version: python3.14
+      # Run the linter.
+      - id: ruff-check
+        args: [ --fix ]
+      # Run the formatter.
+      - id: ruff-format
