--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.104.0
     hooks:
-      - id: terraform_fmt
+      # - id: terraform_fmt
       - id: terraform_tflint
       - id: terraform_validate
         exclude: '(examples)'
