--- a/.github/workflows/terraform-static-analysis.yml
+++ b/.github/workflows/terraform-static-analysis.yml
@@ -1,67 +1,63 @@
-name: Terraform Static Code Analysis
-
-on:
-  workflow_dispatch:
-  pull_request:
-    branches:
-      - main
-    paths:
-      - '**.tf'
-      - '.github/workflows/terraform-static-analysis.yml'
-
-permissions:
-  contents: read
-
-jobs:
-  terraform-static-analysis:
-    permissions:
-      pull-requests: write
-    name: Terraform Static Analysis
-    runs-on: ubuntu-latest
-    if: github.event_name != 'workflow_dispatch'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          fetch-depth: 0
-      - name: Run Analysis
-        uses: ministryofjustice/modernisation-platform-github-actions/terraform-static-analysis@0c879ebf9183dd7e47d3fe9c961afa3271843b8b # v3.6.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          scan_type: changed
-          trivy_severity: HIGH,CRITICAL
-          trivy_ignore: ./.trivyignore.yaml
-          checkov_exclude: CKV_GIT_1,CKV_AWS_126,CKV2_AWS_38,CKV2_AWS_39
-          tflint_exclude: terraform_unused_declarations
-          tflint_call_module_type: none
-          tfsec_trivy: trivy
-
-  terraform-static-analysis-full-scan:
-    permissions:
-      contents: read
-      actions: read
-      security-events: write
-      pull-requests: write
-    name: Terraform Static Analysis - scan all directories
-    runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          fetch-depth: 0
-      - name: Run Analysis
-        uses: ministryofjustice/modernisation-platform-github-actions/terraform-static-analysis@0c879ebf9183dd7e47d3fe9c961afa3271843b8b # v3.6.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          scan_type: full
-          tfsec_trivy: trivy
-          trivy_skip_dir: ""
-          trivy_severity: HIGH,CRITICAL
-          trivy_ignore: ./.trivyignore.yaml
-          tfsec_exclude: aws-ssm-secret-use-customer-key,github-repositories-private,aws-vpc-no-excessive-port-access,github-repositories-require-signed-commits
-          checkov_exclude: CKV_GIT_1,CKV_AWS_126,CKV2_AWS_38,CKV2_AWS_39
-          tflint_exclude: terraform_unused_declarations
-          tflint_call_module_type: none
+# name: Terraform Static Code Analysis
+# on:
+#   workflow_dispatch:
+#   pull_request:
+#     branches:
+#       - main
+#     paths:
+#       - '**.tf'
+#       - '.github/workflows/terraform-static-analysis.yml'
+# permissions:
+#   contents: read
+# jobs:
+#   terraform-static-analysis:
+#     permissions:
+#       pull-requests: write
+#     name: Terraform Static Analysis
+#     runs-on: ubuntu-latest
+#     if: github.event_name != 'workflow_dispatch'
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+#         with:
+#           fetch-depth: 0
+#       - name: Run Analysis
+#         uses: ministryofjustice/modernisation-platform-github-actions/terraform-static-analysis@0c879ebf9183dd7e47d3fe9c961afa3271843b8b # v3.6.0
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           scan_type: changed
+#           trivy_severity: HIGH,CRITICAL
+#           trivy_ignore: ./.trivyignore.yaml
+#           checkov_exclude: CKV_GIT_1,CKV_AWS_126,CKV2_AWS_38,CKV2_AWS_39
+#           tflint_exclude: terraform_unused_declarations
+#           tflint_call_module_type: none
+#           tfsec_trivy: trivy
+#   terraform-static-analysis-full-scan:
+#     permissions:
+#       contents: read
+#       actions: read
+#       security-events: write
+#       pull-requests: write
+#     name: Terraform Static Analysis - scan all directories
+#     runs-on: ubuntu-latest
+#     if: github.event_name == 'workflow_dispatch'
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+#         with:
+#           fetch-depth: 0
+#       - name: Run Analysis
+#         uses: ministryofjustice/modernisation-platform-github-actions/terraform-static-analysis@0c879ebf9183dd7e47d3fe9c961afa3271843b8b # v3.6.0
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           scan_type: full
+#           tfsec_trivy: trivy
+#           trivy_skip_dir: ""
+#           trivy_severity: HIGH,CRITICAL
+#           trivy_ignore: ./.trivyignore.yaml
+#           tfsec_exclude: aws-ssm-secret-use-customer-key,github-repositories-private,aws-vpc-no-excessive-port-access,github-repositories-require-signed-commits
+#           checkov_exclude: CKV_GIT_1,CKV_AWS_126,CKV2_AWS_38,CKV2_AWS_39
+#           tflint_exclude: terraform_unused_declarations
+#           tflint_call_module_type: none
