--- a/.github/workflows/prek-check.yml
+++ b/.github/workflows/prek-check.yml
@@ -4,5 +4,7 @@ jobs:
   prek:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - uses: j178/prek-action@v1
+      - uses: actions/checkout@v6.0.1
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3.1.2
+      - uses: j178/prek-action@v1.0.11
