--- a/.github/workflows/prek-check.yml
+++ b/.github/workflows/prek-check.yml
@@ -4,7 +4,17 @@ jobs:
   prek:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6.0.1
+      - uses: actions/checkout@v6
       - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
+        uses: hashicorp/setup-terraform@v3
+      - name: Setup TFLint
+        uses: terraform-linters/setup-tflint@v6
+      - name: Install Trivy
+        uses: aquasecurity/setup-trivy@v0.2.3
+      - name: Setup Python
+        uses: actions/setup-python@v5
+      - name: Install uv
+        run: pipx install uv
+      - name: Install Python tools from pyproject
+        run: uv sync
       - uses: j178/prek-action@v1.0.11
