--- a/.github/workflows/prek-check.yml
+++ b/.github/workflows/prek-check.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
       - name: Install uv
-        run: pipx install uv
+        run: pip install uv
       - name: Install Python tools from pyproject
         run: uv sync
       - uses: j178/prek-action@v1.0.11
