--- a/.github/workflows/prek-check.yml
+++ b/.github/workflows/prek-check.yml
@@ -1,5 +1,6 @@
 name: Prek checks
 on: pull_request
+permissions: read-all
 jobs:
   prek:
     runs-on: ubuntu-latest
@@ -13,6 +14,8 @@ jobs:
         uses: aquasecurity/setup-trivy@v0.2.3
       - name: Setup Python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
       - name: Install Checkov
         run: pipx install checkov
       - uses: j178/prek-action@v1.0.11
