added exclusion to terraform_validate

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,9 @@ repos:
       - id: terraform_fmt
       - id: terraform_tflint
       - id: terraform_validate
-        exclude: '(examples)'
+        exclude: >
+          ^examples/ |^\.terraform\.lock\.hcl$
+
       - id: terraform_trivy
         args:
           - --args=--skip-dirs=**.terraform
