--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: terraform_tflint
       - id: terraform_validate
         args:
-          - --tf-init-args=-upgrade
+          - --tf-init-args=-lockfile=readonly
         exclude: '^examples/'
       - id: terraform_trivy
         args:
