--- a/.github/workflows/prek-check.yml
+++ b/.github/workflows/prek-check.yml
@@ -20,4 +20,4 @@ jobs:
         run: pipx install checkov
       - uses: j178/prek-action@v1.0.11
         with:
-          args: run
+          extra-args: ''
