--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ env/
 terraform.tfstate
 terraform.tfstate.backup
 megalinter-reports/*
+.venv*
+*.egg-info/
+.pytest*
+.ruff*
+*pycache*
+.coverage*
